updated build process

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
   },
+  "types": "dist/types/index.d.ts",
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=8.0.0",
