--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "removeComments": false,
     "inlineSources": true,
     "useDefineForClassFields": false,
-    "outDir": "dist",
+    "outDir": "types",
     "allowJs": true,
     "types": [
       "./node_modules/decentraland-ecs/types/env",
