--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Publish
         uses: menduz/oddish-action@master
         with:
-          #cwd: ./dist
+          cwd: ./dist
           access: public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
