updating build process

--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "dist"
   ],
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.1",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
     "decentraland-ecs": "latest",
     "rollup": "^2.70.1",
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript2": "^0.31.2"
   },
   "types": "dist/types/index.d.ts",
   "engines": {
