--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dcldash",
-  "version": "0.0.11",
+  "version": "0.0.15",
   "description": "DCLconnect utility library",
   "main": "./dist/index.js",
   "scripts": {
@@ -31,7 +31,7 @@
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
-    "decentraland-ecs": "latest",
+    "decentraland-ecs": "^6.10.0",
     "rollup": "^2.70.1",
     "rollup-plugin-terser": "^7.0.2"
   },
