--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
     "outDir": ".",
     "allowJs": true,
     "types": [
-      "node_modules/decentraland-ecs/types/@decentraland/env",
-      "node_modules/decentraland-ecs/types/@decentraland/dcl",
+      "node_modules/decentraland-ecs/types/env",
+      "node_modules/decentraland-ecs/types/dcl",
       "node_modules/decentraland-ecs/types/@decentraland/EthereumController",
       "node_modules/decentraland-ecs/types/@decentraland/SocialController",
       "node_modules/decentraland-ecs/types/@decentraland/Identity",
@@ -36,7 +36,19 @@
       "node_modules/decentraland-ecs/types/@decentraland/Players"
     ],
     "typeRoots": [
-      "."
+      ".",
+      "node_modules/decentraland-ecs/types/env",
+      "node_modules/decentraland-ecs/types/dcl",
+      "node_modules/decentraland-ecs/types/@decentraland/EthereumController",
+      "node_modules/decentraland-ecs/types/@decentraland/SocialController",
+      "node_modules/decentraland-ecs/types/@decentraland/Identity",
+      "node_modules/decentraland-ecs/types/@decentraland/web3-provider",
+      "node_modules/decentraland-ecs/types/@decentraland/EnvironmentAPI",
+      "node_modules/decentraland-ecs/types/@decentraland/ParcelIdentity",
+      "node_modules/decentraland-ecs/types/@decentraland/PortableExperiences",
+      "node_modules/decentraland-ecs/types/@decentraland/RestrictedActions",
+      "node_modules/decentraland-ecs/types/@decentraland/SignedFetch",
+      "node_modules/decentraland-ecs/types/@decentraland/Players"
     ]
   },
 }
