--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,48 +7,12 @@
   ],
   "compilerOptions": {
     "target": "es6",
-    "module": "ESNext",
+    "module": "esnext",
+    "strict": true,
+    "removeComments": true,
     "declaration": true,
-    "moduleResolution": "classic",
-    "pretty": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "downlevelIteration": true,
-    "keyofStringsOnly": true,
-    "sourceMap": false,
-    "removeComments": false,
-    "useDefineForClassFields": false,
-    "outDir": ".",
-    "allowJs": true,
-    "types": [
-      "node_modules/decentraland-ecs/types/env",
-      "node_modules/decentraland-ecs/types/dcl",
-      "node_modules/decentraland-ecs/types/@decentraland/EthereumController",
-      "node_modules/decentraland-ecs/types/@decentraland/SocialController",
-      "node_modules/decentraland-ecs/types/@decentraland/Identity",
-      "node_modules/decentraland-ecs/types/@decentraland/web3-provider",
-      "node_modules/decentraland-ecs/types/@decentraland/EnvironmentAPI",
-      "node_modules/decentraland-ecs/types/@decentraland/ParcelIdentity",
-      "node_modules/decentraland-ecs/types/@decentraland/PortableExperiences",
-      "node_modules/decentraland-ecs/types/@decentraland/RestrictedActions",
-      "node_modules/decentraland-ecs/types/@decentraland/SignedFetch",
-      "node_modules/decentraland-ecs/types/@decentraland/Players"
-    ],
-    "typeRoots": [
-      ".",
-      "node_modules/decentraland-ecs/types/env",
-      "node_modules/decentraland-ecs/types/dcl",
-      "node_modules/decentraland-ecs/types/@decentraland/EthereumController",
-      "node_modules/decentraland-ecs/types/@decentraland/SocialController",
-      "node_modules/decentraland-ecs/types/@decentraland/Identity",
-      "node_modules/decentraland-ecs/types/@decentraland/web3-provider",
-      "node_modules/decentraland-ecs/types/@decentraland/EnvironmentAPI",
-      "node_modules/decentraland-ecs/types/@decentraland/ParcelIdentity",
-      "node_modules/decentraland-ecs/types/@decentraland/PortableExperiences",
-      "node_modules/decentraland-ecs/types/@decentraland/RestrictedActions",
-      "node_modules/decentraland-ecs/types/@decentraland/SignedFetch",
-      "node_modules/decentraland-ecs/types/@decentraland/Players"
-    ]
+    "declarationDir": ".",
+    "outDir": "dist"
   },
+  "extends": "./node_modules/decentraland-ecs/types/tsconfig.json"
 }
