--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dcldash",
-  "version": "0.0.27",
+  "version": "0.0.29",
   "description": "DCLconnect utility library",
   "main": "./dist/index.js",
   "module": "./dist/bundle.js",
@@ -34,13 +34,12 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "decentraland-ecs": "^6.10.0",
     "rollup": "^2.70.1",
+    "rollup-plugin-node-externals": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
-    "@types/es6-shim": "^0.31.42",
-    "es6-shim": "^0.35.6",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.31.2"
+    "es6-map": "^0.1.5",
+    "es6-set": "^0.1.5"
   },
   "types": "dist/index.d.ts",
   "engines": {
