--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
     "decentraland-ecs": "^6.10.0",
+    "docdash": "^1.2.0",
     "rollup": "^2.70.1",
     "rollup-plugin-node-externals": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
@@ -44,8 +45,5 @@
     "node": ">=16.0.0",
     "npm": ">=8.0.0",
     "yarn": "please use npm"
-  },
-  "dependencies": {
-    "dcldash": "file:"
   }
 }
