--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,14 @@
     "dist",
     "node_modules",
   ],
+  "sourceMap": true,
   "compilerOptions": {
     "target": "es6",
     "module": "esnext",
     "strict": true,
-    "removeComments": true,
+    "removeComments": false,
     "declaration": true,
+    "declarationMap": true,
     "declarationDir": ".",
     "outDir": "dist",
   },
