added test lights and some bug fixes

--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "node": ">=16.0.0",
     "npm": ">=8.0.0",
     "yarn": "please use npm"
+  },
+  "dependencies": {
+    "dcldash": "file:"
   }
 }
