--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
-    "decentraland-ecs": "^6.10.0",
     "docdash": "^1.2.0",
     "rollup": "^2.70.1",
     "rollup-plugin-node-externals": "^4.0.0",
@@ -47,6 +46,7 @@
     "yarn": "please use npm"
   },
   "dependencies": {
-    "dcldash": "file:"
+    "dcldash": "file:",
+    "decentraland-ecs": "^6.10.0"
   }
 }
